# serpico

./: LICENSE  README.md  pyproject.toml  serpico.1
ossec/etc/rules/: local_rules.xml  serpico_rules.xml
src/serpico/: __init__.py
wazuh-dashboard/: FreeBSD_VD_Dashboard.ndjson
